# hole_filling_3d_lib

./: .gitignore  CMakeLists.txt  Readme.md  library.h
base/: HalfEdge.cpp  Mesh.cpp  Mesh.hpp  Triangle.cpp  Vertex.cpp  base.hpp
examples/: experiment_example.cpp  playground.cpp  simple_example.cpp
experiments/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
filling_strategy/: BaseFillingStrategy.hpp  FillingStrategy.hpp  ImproveStrategy.hpp
filling_strategy/Fairing/: FairingStrategy.hpp  StupidUmbrella.cpp  StupidUmbrella.hpp  Tools.cpp  Tools.hpp  WithoutFairing.cpp  WithoutFairing.hpp
filling_strategy/InitialTriangulation/: FillSmall.cpp  FillSmall.hpp  MinAreaTriangulation.cpp  MinAreaTriangulation.hpp  StupidMinAreaTriangulation.cpp  StupidMinAreaTriangulation.hpp  TriangulationStrategy.hpp  WithoutTriangulation.cpp  WithoutTriangulation.hpp
filling_strategy/InitialTriangulation/AdvancingFrontMethods/: AdvancingFront.cpp  AdvancingFront.hpp  BaseAdvancingFront.cpp  BaseAdvancingFront.hpp  ModernAdvancingFront.cpp  ModernAdvancingFront.hpp
filling_strategy/Refinement/: DeloneLike.cpp  DeloneLike.hpp  RefinementStrategy.hpp  WithoutRefinement.cpp  WithoutRefinement.hpp
filling_strategy/Strategies/: AdvancingFrontFilling.cpp  AdvancingFrontFilling.hpp  ClassicFillingStrategy.cpp  ClassicFillingStrategy.hpp  FastHoleFillingMethod.cpp  FastHoleFillingMethod.hpp  LiepraFilling.cpp  LiepraFilling.hpp  ModernAdvancingFrontFilling.cpp  ModernAdvancingFrontFilling.hpp  SequenceFillingStrategy.cpp  SequenceFillingStrategy.hpp  StupidFilling.cpp  StupidFilling.hpp
filling_strategy/tools/: Hole.cpp  Hole.hpp  MeshController.cpp  MeshController.hpp
geometry/: Point.cpp  Point.hpp
io/: BaseIStream.cpp  BaseIStream.hpp  BaseOStream.cpp  BaseOStream.hpp  OffIStream.cpp  OffIStream.hpp  OffOStream.cpp  OffOStream.hpp  StlBinaryIStream.cpp  StlBinaryIStream.hpp  StlBinaryIstream.cpp  StlBinaryIstream.hpp  StlBinaryOStream.cpp  StlBinaryOStream.hpp  StlBinaryOstream.cpp  StlBinaryOstream.hpp
models/for_test/: 1sphere_hole.stl  2sphere_dumbbell_hole.STL  4bun_high.stl  5sphere_small.STL  6sphere_ssmall.stl
models/for_test/New Folder/: bun_high.stl
models/for_test/test_result/: 16sphere_hole.stl  bunny.stl  out8.stl
static/: defines.hpp
tools/: string_tools.cpp  string_tools.hpp
